Data-prep/PINN/Basic_training/spartan/output_files/job_6744313/error_6744313.txt

Currently Loaded Modules:
  1) Anaconda3/2024.02-1

 

  File "/home/rrammohan/jobs/1D_HT_Pinn/Data-prep/PINN/Basic_training/spartan/1d-normal.py", line 5
    %load_ext autoreload
    ^
SyntaxError: invalid syntax
